feat: add right-click status to caloric emitter