@@ -26,7 +26,7 @@ public class CaloricFluxEmitterSelectionBehaviour extends SelectionBehaviour<Cal
         if (this.selectedPoints.isEmpty()) {
             player.displayClientMessage(Component.translatable(TheurgyConstants.I18n.Behaviour.SELECTION_SUMMARY_CALORIC_FLUX_EMITTER_NO_SELECTION).withStyle(ChatFormatting.RED), true);
         } else {
-            var target = this.selectedPoints.get(0);
+            var target = this.selectedPoints.getFirst();
             var state = target.getBlockState();
             player.displayClientMessage(Component.translatable(TheurgyConstants.I18n.Behaviour.SELECTION_SUMMARY_CALORIC_FLUX_EMITTER, state.getBlock().getName()).withStyle(ChatFormatting.WHITE), true);
         }
